--- a/WebQLNS/Site.Master
+++ b/WebQLNS/Site.Master
@@ -34,7 +34,7 @@
         </div>
         <div class="bg-info text-center text-danger mb-0">
             <marquee>
-            Thiết kế Bởi: Nguyễn Quốc Dư - 2221160030 
+            Thiết kế Bởi: Trần Minh Tuyền - 2221160030 
                 </marquee>
         </div>
     </form>
