--- a/WebQLNS/Site.Master
+++ b/WebQLNS/Site.Master
@@ -28,7 +28,7 @@
       </a>
       <div class="dropdown-menu">
         <a class="dropdown-item" href="qlTheLoai.aspx">Thể loại</a>
-        <a class="dropdown-item" href="qlTinTuc">Bản tin</a>
+        <a class="dropdown-item" href="qlTinTuc.aspx">Bản tin</a>
        
       </div>
     </li>
@@ -41,7 +41,8 @@
         </div>
         <div class="bg-info text-center text-danger mb-0">
             <marquee>
-            Thiết kế Bởi: Trần Minh Tuyền - 2221160030 
+            Thiết kế Bởi: Trần Minh Tuyền - 2221160020
+
                 </marquee>
         </div>
     </form>
